--- a/public/package.json
+++ b/public/package.json
@@ -15,12 +15,10 @@
     "url": "git@github.com:brandiqa/simplewebrtc-messenger.git"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "handlebars": "^4.7.6",
-    "https": "^1.0.0",
-    "jquery": "^3.5.1",
-    "semantic-ui-css": "^2.4.1",
-    "simplewebrtc": "^3.0.2",
-    "socket.io": "^2.3.0"
+    "express": "^4.16.3",
+    "handlebars": "^4.0.11",
+    "jquery": "^3.3.1",
+    "semantic-ui-css": "^2.3.1",
+    "simplewebrtc": "^3.0.1"
   }
 }
